--- a/src/app/components/client/page/avancement-client/avancement-client.component.html
+++ b/src/app/components/client/page/avancement-client/avancement-client.component.html
@@ -1,7 +1,7 @@
 <div class="bg-surface-0 dark:bg-surface-900">
     <div id="home" class="landing-wrapper overflow-hidden">
         <app-topbar-client class="py-6 px-6 mx-0 md:mx-12 lg:mx-20 lg:px-20 flex items-center justify-between fix lg:static" />
-                <div class="card" style="background-color:#bee5ff;">
+                <div class="card" style="background-color:#97D5FF;">
                     <div class="mb-5 flex">
                         <div class="flex flex-col gap-2">
                             <label for="username">Immatricule</label>
