--- a/src/app/components/client/page/devis-general-client/devis-general-client.component.html
+++ b/src/app/components/client/page/devis-general-client/devis-general-client.component.html
@@ -114,6 +114,10 @@
         <label for="username" class="font-semibold w-24">Heure:</label>
         <input type="time" pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="rdv2.heurerdv"/>
     </div>
+    <div class="flex items-center gap-4 mb-4">
+        <label for="username" class="font-semibold w-24">Immatriculation:</label>
+        <input type="text" pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="rdv2.matriculation"/>
+    </div>
     <div *ngIf="message">
         <p>{{ message }}</p>
       </div>
@@ -142,6 +146,10 @@
     <div class="flex items-center gap-4 mb-4">
         <label for="username" class="font-semibold w-24">Heure:</label>
         <input type="time" pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="rdv.heurerdv"/>
+    </div>
+    <div class="flex items-center gap-4 mb-4">
+        <label for="username" class="font-semibold w-24">Immatriculation:</label>
+        <input type="text" pInputText id="username" class="flex-auto" autocomplete="off" [(ngModel)]="rdv.matriculation"/>
     </div>
     <div *ngIf="message">
         <p>{{ message }}</p>
