--- a/src/app/components/manager/component/dashboard-kpi/dashboard-kpi.component.html
+++ b/src/app/components/manager/component/dashboard-kpi/dashboard-kpi.component.html
@@ -1,9 +1,9 @@
-<div class="col-span-12 lg:col-span-6 xl:col-span-3">
+<div class="col-span-12 lg:col-span-6 xl:col-span-3 mb-8">
     <div class="card mb-0">
         <div class="flex justify-between mb-4">
             <div>
                 <span class="block text-muted-color font-medium mb-4">Nombre de RDV</span>
-                <div class="text-surface-900 dark:text-surface-0 font-medium text-xl">152</div>
+                <div class="text-surface-900 dark:text-surface-0 font-medium text-xl">{{countRdv}}</div>
             </div>
             <div class="flex items-center justify-center bg-blue-100 dark:bg-blue-400/10 rounded-border" style="width: 2.5rem; height: 2.5rem">
                 <i class="pi pi-calendar text-blue-500 !text-xl"></i>
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="col-span-12 lg:col-span-6 xl:col-span-3">
+<!-- <div class="col-span-12 lg:col-span-6 xl:col-span-3">
     <div class="card mb-0">
         <div class="flex justify-between mb-4">
             <div>
@@ -24,9 +24,9 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
-<div class="col-span-12 lg:col-span-6 xl:col-span-3">
+<!-- <div class="col-span-12 lg:col-span-6 xl:col-span-3">
     <div class="card mb-0">
         <div class="flex justify-between mb-4">
             <div>
@@ -54,5 +54,5 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
