feature:meca-rdv

--- a/src/app/components/client/page/topbar-client/topbar-client.component.html
+++ b/src/app/components/client/page/topbar-client/topbar-client.component.html
@@ -27,18 +27,18 @@
                 <span>Nos services</span>
             </a>
         </li>
-        <li>
+        <!-- <li>
             <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" routerLink="/diagnostic">
                 <span>Diagnostic</span>
             </a>
-        </li>
+        </li> -->
         <li>
             <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" (click)="showDialog()">
                 <span>Faire un devis</span>
             </a>
         </li>
         <li>
-            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" routerLink="/avancement">
+            <a  pRipple class="px-0 py-4 text-surface-900 dark:text-surface-0 font-medium text-xl" (click)="goAvancement()">
                 <span>Avancement</span>
             </a>
         </li>
