--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -14,27 +14,86 @@
 
                             <div class="text-surface-900 dark:text-surface-0 text-3xl font-medium mb-4">Bienvenue à
                                 GAR'ANJA!</div>
-                            <span class="text-muted-color font-medium">Veuiller entrer vos coordonnée</span>
-                        </div>
+                            <p-tabs value="0">
+                                <p-tablist class="flex justify-center">
+                                    <p-tab value="3" class="white" disabled>Client</p-tab>
+                                    <p-tab value="4" class="white" disabled>.</p-tab>
+                                    <p-tab value="0" (click)="stat(0)">Client</p-tab>
+                                    <p-tab value="1" (click)="stat(1)">Mecanicien</p-tab>
+                                    <p-tab value="2" (click)="stat(2)">Manager</p-tab>
+                                </p-tablist>
+                                <p-tabpanels>
+                                    <p-tabpanel value="0">
+                                        <div>
+                                            <label for="email1"
+                                                class="block text-surface-900 dark:text-surface-0 text-xl font-medium mb-2">Email</label>
+                                            <input pInputText id="email1" type="text" placeholder="Entrer email..."
+                                                class="w-full md:w-[30rem] mb-8" [(ngModel)]="email"/>
 
-                        <div>
-                            <label for="email1"
-                                class="block text-surface-900 dark:text-surface-0 text-xl font-medium mb-2">Email</label>
-                            <input pInputText id="email1" type="text" placeholder="Entrer email..."
-                                class="w-full md:w-[30rem] mb-8" [(ngModel)]="email" />
+                                            <label for="password1"
+                                                class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">Mot de passe</label>
+                                            <p-password id="password1" [(ngModel)]="mdp" placeholder="Mot de passe..."
+                                                [toggleMask]="true" styleClass="mb-4" [fluid]="true"
+                                                [feedback]="false"></p-password>
 
-                            <label for="password1"
-                                class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">Password</label>
-                            <p-password id="password1" [(ngModel)]="mdp" placeholder="Mot de passe..."
-                                [toggleMask]="true" styleClass="mb-4" [fluid]="true" [feedback]="false"></p-password>
+                                            <div class="flex items-center justify-between mt-2 mb-8 gap-8">
+                                                <div class="flex items-center">
+                                                </div>
+                                                <span
+                                                    class="font-medium no-underline ml-2 text-right cursor-pointer text-primary" routerLink="/inscription">S'inscrire</span>
+                                            </div>
+                                            <p-button label="Se connecter" styleClass="w-full"
+                                                (click)="login()"></p-button>
+                                        </div>
+                                    </p-tabpanel>
+                                    <p-tabpanel value="1">
+                                        <div>
+                                            <label for="email1"
+                                                class="block text-surface-900 dark:text-surface-0 text-xl font-medium mb-2">Email</label>
+                                            <input pInputText id="email1" type="text" placeholder="Entrer email..."
+                                                class="w-full md:w-[30rem] mb-8" [(ngModel)]="email" />
 
-                            <div class="flex items-center justify-between mt-2 mb-8 gap-8">
-                                <div class="flex items-center">
-                                </div>
-                                <span
-                                    class="font-medium no-underline ml-2 text-right cursor-pointer text-primary">S'inscrire</span>
-                            </div>
-                            <p-button label="Se connecter" styleClass="w-full" (click)="login()"></p-button>
+                                            <label for="password1"
+                                                class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">Mot de passe</label>
+                                            <p-password id="password1" [(ngModel)]="mdp" placeholder="Mot de passe..."
+                                                [toggleMask]="true" styleClass="mb-4" [fluid]="true"
+                                                [feedback]="false"></p-password>
+
+                                            <div class="flex items-center justify-between mt-2 mb-8 gap-8">
+                                                <div class="flex items-center">
+                                                </div>
+                                                <span
+                                                    class="font-medium no-underline ml-2 text-right cursor-pointer text-primary" routerLink="/inscription">S'inscrire</span>
+                                            </div>
+                                            <p-button label="Se connecter" styleClass="w-full"
+                                                (click)="login()"></p-button>
+                                        </div>
+                                    </p-tabpanel>
+                                    <p-tabpanel value="2">
+                                        <div>
+                                            <label for="email1"
+                                                class="block text-surface-900 dark:text-surface-0 text-xl font-medium mb-2">Email</label>
+                                            <input pInputText id="email1" type="text" placeholder="Entrer email..."
+                                                class="w-full md:w-[30rem] mb-8" [(ngModel)]="email" />
+
+                                            <label for="password1"
+                                                class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">Mot de passe</label>
+                                            <p-password id="password1" [(ngModel)]="mdp" placeholder="Mot de passe..."
+                                                [toggleMask]="true" styleClass="mb-4" [fluid]="true"
+                                                [feedback]="false"></p-password>
+
+                                            <div class="flex items-center justify-between mt-2 mb-8 gap-8">
+                                                <div class="flex items-center">
+                                                </div>
+                                                <span
+                                                    class="font-medium no-underline ml-2 text-right cursor-pointer text-primary" routerLink="/inscription">S'inscrire</span>
+                                            </div>
+                                            <p-button label="Se connecter" styleClass="w-full"
+                                                (click)="login()"></p-button>
+                                        </div>
+                                    </p-tabpanel>
+                                </p-tabpanels>
+                            </p-tabs>
                         </div>
                     </div>
                 </div>
@@ -43,3 +102,10 @@
         <app-footer-client />
     </div>
 </div>
+
+<style>
+    .white {
+        color: white !important;
+    }
+
+</style>
