fix:devis-modelevehicule

--- a/src/app/components/client/page/topbar-client/topbar-client.component.html
+++ b/src/app/components/client/page/topbar-client/topbar-client.component.html
@@ -61,6 +61,7 @@
              optionValue="id"
             class="w-full"
             [(ngModel)]="catv"
+            (ngModelChange)="loadModele()"
         />
     </div>
     <div class="flex items-center gap-4 mb-8">
