--- a/src/app/components/manager/component/liste-commande-pieces/liste-commande-pieces.component.html
+++ b/src/app/components/manager/component/liste-commande-pieces/liste-commande-pieces.component.html
@@ -1,7 +1,7 @@
 <div class="card " >
-    <div class="flex justify-end mb-3">
+    <!-- <div class="flex justify-end mb-3">
         <p-button (click)="showDialogNew()" icon="pi pi-plus" label="New" severity="info" />
-    </div>
+    </div> -->
     <!-- <div class="flex mb-5 gap-3">
         <input type="text" pInputText  variant="filled" placeholder="Nom Piece"/>
         <input type="text" pInputText  variant="filled" placeholder="Modele Voiture"/>
