--- a/src/app/components/manager/component/service-liste/service-liste.component.html
+++ b/src/app/components/manager/component/service-liste/service-liste.component.html
@@ -1,7 +1,7 @@
 <div class="card ">
-    <div class="flex justify-end mb-3">
+    <!-- <div class="flex justify-end mb-3">
         <p-button (click)="showDialogNew()" icon="pi pi-plus" label="New" severity="info" />
-    </div>
+    </div> -->
 
     <p-table [value]="services" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
         [rowsPerPageOptions]="[5, 10, 20]">
